--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Maria Jesus Bohiguez Perez"
-baseURL = "localhost"
+baseURL = "https://mariajesus.netlify.app/"
 theme = "bilberry-hugo-theme"
 
 # Generate the robots.txt file for SEO
